[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/mouse_over.png" type="Texture" id=1]
[ext_resource path="res://src/POS.gd" type="Script" id=2]
[ext_resource path="res://assets/x.png" type="Texture" id=3]
[ext_resource path="res://assets/o.png" type="Texture" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 21.0

[node name="POS" type="Area2D"]
show_behind_parent = true
position = Vector2( 472, 280 )
z_index = -1
script = ExtResource( 2 )

[node name="mouse_over" type="Sprite" parent="."]
position = Vector2( 2, -1 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 2, -1 )
shape = SubResource( 1 )

[node name="o" type="Sprite" parent="."]
visible = false
show_behind_parent = true
position = Vector2( 2, -1 )
scale = Vector2( 0.4, 0.4 )
z_index = -1
texture = ExtResource( 4 )

[node name="x" type="Sprite" parent="."]
visible = false
show_behind_parent = true
position = Vector2( 2, -1 )
scale = Vector2( 0.4, 0.4 )
z_index = -1
texture = ExtResource( 3 )
[connection signal="input_event" from="." to="." method="_on_POS_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_POS_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_POS_mouse_exited"]
